# memcore-rs

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .env.staging.example  .gitignore  .gitleaks.toml  .hadolint.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml
crates/memcore-api/: Cargo.toml  HEALTH_ROUTE_PLAN.md  build.rs
crates/memcore-api/src/: app.rs  lib.rs  main.rs  shutdown.rs  state.rs
crates/memcore-api/src/dto/: admin.rs  api_keys.rs  context.rs  export.rs  import.rs  jobs.rs  keyword_search.rs  memories.rs  memory_events.rs  mod.rs  provider_usage_retention.rs  retention.rs
crates/memcore-api/src/metrics/: handlers.rs  labels.rs  middleware.rs  mod.rs  ops.rs  provider.rs  registry.rs
crates/memcore-api/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  request_limits.rs  security_headers.rs  tenant.rs
crates/memcore-api/src/observability/: logging.rs  metrics.rs  mod.rs  request_id.rs  tracing.rs
crates/memcore-api/src/openapi/: mod.rs  paths.rs
crates/memcore-api/src/response/: error.rs  mod.rs
crates/memcore-api/src/routes/: admin.rs  api_keys.rs  common.rs  context.rs  health.rs  memories.rs  memory_events.rs  mod.rs  users.rs
crates/memcore-api/src/security/: api_keys.rs  mod.rs  scopes.rs
crates/memcore-api/tests/: admin_api.rs  admin_audit_api.rs  api_keys_api.rs  api_routes.rs  auth_api.rs  background_jobs_api.rs  bootstrap_api.rs  bootstrap_postgres_api.rs  common.rs  context_api.rs  context_cache_metrics_api.rs  database_auth_api.rs  e2e.rs  export_api.rs  import_api.rs  lancedb_vectors_api.rs  memories_api.rs  memories_delete_api.rs  memories_list_api.rs  memories_search_api.rs  memory_events_api.rs  observability_api.rs  openapi_api.rs  org_usage_dashboard_api.rs  prometheus_metrics_api.rs  provider_usage_api.rs  provider_usage_retention_api.rs  qdrant_vectors_api.rs  quotas_api.rs  rate_limit_api.rs  retention_api.rs  secret_redaction_api.rs  security_hardening_api.rs  sqlite_facts_api.rs  tenant_api.rs  users_forget_api.rs  version_api.rs
crates/memcore-api/tests/support/: assertions.rs  fixtures.rs  mod.rs  test_app.rs
crates/memcore-core/: Cargo.toml
crates/memcore-core/src/: lib.rs
crates/memcore-core/src/admin/: mod.rs  types.rs
crates/memcore-core/src/audit/: mod.rs
crates/memcore-core/src/backup/: mod.rs  service.rs  types.rs
crates/memcore-core/src/context/: assembler.rs  budget.rs  cache.rs  cache_coordinator.rs  cache_metrics.rs  compression.rs  compression_options.rs  format_options.rs  formatter.rs  mod.rs  summarizer.rs  token_estimator.rs  types.rs
crates/memcore-core/src/dedup/: detector.rs  embedding.rs  mod.rs  types.rs
crates/memcore-core/src/engine/: mod.rs  types.rs
crates/memcore-core/src/export/: mod.rs  types.rs
crates/memcore-core/src/import/: mod.rs  types.rs  validation.rs
crates/memcore-core/src/importance/: mod.rs  scorer.rs
crates/memcore-core/src/jobs/: mod.rs  registry.rs  retry.rs  runner.rs  types.rs
crates/memcore-core/src/lifecycle/: detector.rs  executor.rs  mod.rs  types.rs
crates/memcore-core/src/models/: api_key.rs  event.rs  fact.rs  memory.rs  mod.rs  tenant.rs  validation.rs
crates/memcore-core/src/org/: mod.rs  plan.rs
crates/memcore-core/src/pagination/: cursor.rs  mod.rs  types.rs
crates/memcore-core/src/ports/: api_key_store.rs  background_job_lock_store.rs  background_job_run_store.rs  event_store.rs  memory_usage_snapshot_store.rs  mod.rs  org_plan_store.rs  provider.rs  provider_usage.rs  storage.rs
crates/memcore-core/src/privacy/: mod.rs  pii.rs
crates/memcore-core/src/quota/: mod.rs  service.rs  types.rs
crates/memcore-core/src/ranking/: mod.rs  rrf.rs  scorer.rs  types.rs
crates/memcore-core/src/retention/: mod.rs  types.rs
crates/memcore-core/src/shutdown/: mod.rs  token.rs
crates/memcore-core/tests/: context_budget.rs  context_cache_flow.rs  context_cache_stampede.rs  context_cache_swr.rs  context_compression.rs  context_format.rs  cursor_pagination.rs  dedup_importance.rs  embedding_dedup.rs  event_date_filters.rs  export_user_data.rs  import_user_data.rs  keyword_search.rs  memory_audit.rs  memory_engine.rs  org_admin.rs  org_admin_audit.rs  org_usage_dashboard.rs  pagination.rs  provider_execution_policy.rs  provider_fallback_circuit.rs  provider_usage.rs  provider_usage_retention.rs  quota.rs  ranking_search.rs  retention.rs  rrf_search.rs
crates/memcore-providers/: Cargo.toml
crates/memcore-providers/src/: factory.rs  inputs.rs  lib.rs  mocks.rs  traits.rs
crates/memcore-providers/src/circuit_breaker/: breaker.rs  mod.rs  state.rs
crates/memcore-providers/src/openai/: client.rs  embeddings.rs  llm.rs  mod.rs  types.rs
crates/memcore-providers/src/policy/: execute.rs  mod.rs  retry.rs  timeout.rs  wrapping.rs
crates/memcore-providers/src/resilient/: compat.rs  mod.rs
crates/memcore-providers/src/routing/: metrics.rs  mod.rs  router.rs  types.rs
crates/memcore-providers/src/usage/: attribution.rs  mod.rs  persistent.rs  pricing.rs  recorder.rs  tokens.rs  types.rs
crates/memcore-storage/: Cargo.toml  build.rs
crates/memcore-storage/migrations/postgres/: 0001_create_facts.sql  0002_create_memory_events.sql  0003_create_api_keys.sql  0004_create_provider_usage_events.sql  0005_create_org_plan_configs.sql  0006_create_memory_usage_snapshots.sql  0007_create_background_job_runs.sql  0008_create_background_job_locks.sql  0009_add_background_job_retry_fields.sql
crates/memcore-storage/migrations/sqlite/: 0001_create_facts.sql  0002_create_memory_events.sql  0003_create_api_keys.sql  0004_create_provider_usage_events.sql  0005_create_org_plan_configs.sql  0006_create_memory_usage_snapshots.sql  0007_create_background_job_runs.sql  0008_create_background_job_locks.sql  (+1 more)
crates/memcore-storage/src/: keyword_search.rs  lib.rs  mocks.rs  pagination.rs  queries.rs  traits.rs  vector.rs
crates/memcore-storage/tests/: lancedb_vector_store.rs  postgres_api_key_store.rs  postgres_event_store.rs  postgres_fact_store.rs  qdrant_vector_store.rs  redis_context_cache.rs
(+107 files in other folders)
