[workspace]
members = [
    "crates/memcore-api",
    "crates/memcore-core",
    "crates/memcore-storage",
    "crates/memcore-providers",
    "crates/memcore-config",
    "crates/memcore-common",
]
resolver = "3"

# Temporary exceptions for existing call sites. Prefer fixing new code rather than
# expanding this list. See docs/CI_SECURITY.md.
[workspace.lints.clippy]
too_many_arguments = "allow"
field_reassign_with_default = "allow"
