[package]
name = "memcore-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "memcore_api"
path = "src/lib.rs"

[features]
default = []
postgres = ["memcore-storage/postgres"]
lancedb = ["memcore-storage/lancedb", "memcore-storage/sqlite"]
qdrant = ["memcore-storage/qdrant"]
redis-cache = ["memcore-storage/redis-cache"]

[[bin]]
name = "memcore-api"
path = "src/main.rs"

[[test]]
name = "bootstrap_postgres_api"
required-features = ["postgres"]

[[test]]
name = "database_auth_api"

[[test]]
name = "lancedb_vectors_api"
required-features = ["lancedb"]

[[test]]
name = "qdrant_vectors_api"
required-features = ["qdrant"]

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
memcore-common = { path = "../memcore-common" }
memcore-config = { path = "../memcore-config" }
memcore-core = { path = "../memcore-core" }
memcore-providers = { path = "../memcore-providers" }
memcore-storage = { path = "../memcore-storage", default-features = false, features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
