[package]
name = "memcore-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
memcore-common = { path = "../memcore-common" }
serde = { version = "1", features = ["derive"] }
regex = "1"
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
memcore-providers = { path = "../memcore-providers" }
memcore-storage = { path = "../memcore-storage" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
