[package]
name = "memcore-core"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
memcore-common = { path = "../memcore-common" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
memcore-providers = { path = "../memcore-providers" }
memcore-storage = { path = "../memcore-storage", default-features = false }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
