[package]
name = "memcore-providers"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
memcore-common = { path = "../memcore-common" }
memcore-core = { path = "../memcore-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
memcore-storage = { path = "../memcore-storage" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"
