[package]
name = "memcore-storage"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
lancedb = [
    "dep:lancedb",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:futures",
    "dep:protoc-bin-vendored",
]
qdrant = ["dep:qdrant-client"]
redis-cache = ["dep:redis"]

[dependencies]
arrow-array = { version = "54", optional = true }
arrow-schema = { version = "54", optional = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", optional = true }
lancedb = { version = "0.18.2", optional = true }
qdrant-client = { version = "1.18", optional = true }
redis = { version = "0.28", optional = true, features = ["tokio-comp", "connection-manager"] }
memcore-common = { path = "../memcore-common" }
memcore-core = { path = "../memcore-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
protoc-bin-vendored = { version = "3.2", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "lancedb_vector_store"
required-features = ["lancedb"]

[[test]]
name = "postgres_fact_store"
required-features = ["postgres"]

[[test]]
name = "postgres_event_store"
required-features = ["postgres"]

[[test]]
name = "postgres_api_key_store"
required-features = ["postgres"]

[[test]]
name = "qdrant_vector_store"
required-features = ["qdrant"]

[[test]]
name = "redis_context_cache"
required-features = ["redis-cache"]
